# tracer-inspector

./: README.md  UPDATE_LOG.md  index.html  install.json  package-lock.json  package.json
.github/workflows/: new_release.yml
public/ui-svg/: README.md
scripts/: git_prune_tag.bat  updater.mjs
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/crate/cdp-rs/: README.md
src-tauri/crate/cdp-rs/src/: lib.rs
src-tauri/src/: cache.rs  cdp.rs  main.rs
src/cmd/: assets_ping.ts  ginfo_ping.ts
src/components/: ConsolefeedTerm.vue  DashBoard.vue  NodeProp.vue  NodeTree.vue  ViewMain.vue  Xterm.vue
src/components/Menu/: AvatarConnect.vue
src/components/Panel/: CmdCollapse.vue  TableAssets.vue
src/components/Panel/Cell/: CmdCard.vue
src/inc/: cdp.ts  cdp_js.ts  g_shortcut.ts  xterm.ts
src/model/: asset_property.ts  cmd_property.ts  node_property.ts
src/service/: svr.ts
src/service/loc/: chk_update.ts  con_history.ts
